# flechebench

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
scripts/: play_assisted.py  scrape_leparisien.py
src/flechebench/: __init__.py
src/flechebench/data/: __init__.py  leparisien.py  models.py
src/flechebench/evaluation/: __init__.py  metrics.py
src/flechebench/game/: __init__.py  assisted.py
src/flechebench/generation/: __init__.py  grid.py
src/flechebench/prompts/: __init__.py  templates.py
src/flechebench/solvers/: __init__.py  base.py  dummy.py
tests/: test_assisted_game.py  test_imports.py  test_leparisien.py  test_metrics.py  test_models.py  utils.py
viewer/: leparisien_viewer.html
