[project]
name = "flechebench"
version = "0.1.0"
description = "Research benchmark foundation for French mots fleches solving with language models."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "FlecheBench contributors" }
]
license = { text = "MIT" }
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flechebench"]
